finished the top bit

--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Flower Shop</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        
+        <div class="banner">
+            <div class="banner-content"> 
+                <h1 class="banner-greeting">Let's make beautiful flowers a part of your life.</h1>
+                <p class="banner-description">It is a long established fact that a reader will 
+                be distracted by the readable content of a page when looking at its layout. 
+                The point of using Lorem Ipsum is that it has a more-or-less normal 
+                distribution of letters.</p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <img class="profile-pic" src="images/pngwing10.png" alt="image of flowers">
+        </div>
+        
     </header>
-    <main>
-
-    </main>
+        <main>
+            <div class=""> container</div>
+        </main>
     <footer>
 
     </footer>
