--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </section>
         <main>
-            <section>
+            <section class="off">
                 <div class="deal">
                     <h3 class="deal-title">Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h3>
                     <p class="deal-description">
@@ -60,7 +60,21 @@
                     </p>
                     <button class="sign-up">Sign Up</button>
                 </div>
+                <img class="hotdeal-pic" src="images/pngwing 8.png" alt="image of flowers">
             </section>
+            <div class="insta">
+                <h3 class="insta-title">Instagram</h3>
+                <p class="insta-description">It is a long established fact that a reader will be distracted by the readable content of a 
+                    page when looking at its layout.</p>
+                
+                <div class="insta-pic">
+                  <img src="images/Rectangle 3.png" alt="Image 1">
+                  <img src="images/Rectangle 4.png" alt="Image 2">
+                  <img src="images/Rectangle 5.png" alt="Image 3">
+                  <img src="images/Rectangle 5.png" alt="Image 4">
+                </div>
+              </div>
+              
         </main>
     <footer>
 
